src/tui/screens/snapshots/duklog__tui__screens__qso_entry__tests__rendering__snap_full_screen__snap_editing_mode.snap
---
source: src/tui/screens/qso_entry.rs
expression: terminal.backend()
---
"┌ Edit QSO ────────────────────────────────────────────────────────────────────┐"
"│[K-0001]  0/10 QSOs                                                           │"
"│W1AW @ K-0001 (FN31)    Band: 20M  Mode: SSB                                  │"
"│QSOs today: 0 / 10  [10 needed]                                               │"
"│┌Their Callsign *────────┐┌RST Sent *──────────────┐┌RST Rcvd *──────────────┐│"
"││W3ABC█                  ││59                      ││59                      ││"
"│└────────────────────────┘└────────────────────────┘└────────────────────────┘│"
"│┌Their Park──────────────┐┌Frequency (kHz)─────────┐┌Comments────────────────┐│"
"││                        ││                        ││                        ││"
"│└────────────────────────┘└────────────────────────┘└────────────────────────┘│"
"│ Recent QSOs ─────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│Tab/Shift+Tab: next/prev  Alt+b/m: band/mode (Shift: reverse)  Enter: save  Es│"
"└──────────────────────────────────────────────────────────────────────────────┘"
