src/tui/screens/snapshots/duklog__tui__screens__qso_entry__tests__rendering__snap_full_screen__snap_general_default.snap
---
source: src/tui/screens/qso_entry.rs
expression: terminal.backend()
---
"┌ QSO Entry ───────────────────────────────────────────────────────────────────┐"
"│[W1AW]  0 QSOs                                                                │"
"│W1AW @ - (FN31)    Band: 20M  Mode: SSB                                       │"
"│QSOs today: 0 / 10  [Activated!]                                              │"
"│┌Their Callsign *────────┐┌RST Sent *──────────────┐┌RST Rcvd *──────────────┐│"
"││█                       ││59                      ││59                      ││"
"│└────────────────────────┘└────────────────────────┘└────────────────────────┘│"
"│┌Frequency (kHz)──────────────────────┐┌Comments─────────────────────────────┐│"
"││                                     ││                                     ││"
"│└─────────────────────────────────────┘└─────────────────────────────────────┘│"
"│ Recent QSOs ─────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│Tab/Shift+Tab: next/prev  Alt+b/m: band/mode (Shift: reverse)  Alt+e: edit  Al│"
"└──────────────────────────────────────────────────────────────────────────────┘"
