src/tui/screens/snapshots/duklog__tui__screens__qso_entry__tests__rendering__snap_full_screen__snap_with_error.snap
---
source: src/tui/screens/qso_entry.rs
expression: terminal.backend()
---
"┌ QSO Entry ───────────────────────────────────────────────────────────────────┐"
"│[K-0001]  0/10 QSOs                                                           │"
"│W1AW @ K-0001 (FN31)    Band: 20M  Mode: SSB                                  │"
"│QSOs today: 0 / 10  [10 needed]                                               │"
"│┌Their Callsign *────────┐┌RST Sent *──────────────┐┌RST Rcvd *──────────────┐│"
"││█                       ││59                      ││59                      ││"
"│└────────────────────────┘└────────────────────────┘└────────────────────────┘│"
"│┌Their Park──────────────┐┌Frequency (kHz)─────────┐┌Comments────────────────┐│"
"││                        ││                        ││                        ││"
"│duplicate contact: W3ABC already logged on 20M SSB─┘└────────────────────────┘│"
"│ Recent QSOs ─────────────────────────────────────────────────────────────────│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│Tab/Shift+Tab: next/prev  Alt+b/m: band/mode (Shift: reverse)  Alt+e: edit  Al│"
"└──────────────────────────────────────────────────────────────────────────────┘"
